# libbad-zapple

./: .gitignore  CMakeLists.txt  LibBadZapple.hpp  Makefile  README.md  SocketW.cpp  bad_zapple.cpp  bad_zapple.hpp  makefile
.github/workflows/: github-actions.yml
assets/: config.zap
doc/: Classes
inc/: ActionDurationSet.hpp  GameRuleSet.hpp  LibBadZapple.hpp  MsgHelper.hpp  MsgHelperClient.hpp  MsgHelperSpectator.hpp  Player.hpp  SocketW.hpp  World.hpp  bad_zapple.h  bad_zapple.hpp
le_test_maudit/: test_SocketW.cpp
lib/share/pkgconfig/: catch2-with-main.pc  catch2.pc
src/: GameRuleSet.cpp  MsgHelperClient.cpp  MsgHelperSpectator.cpp  Player.cpp  SocketW.cpp  World.cpp  bad_zapple.cpp  dummy.cpp
tests/: basic.cpp  test.cpp  test_SocketW.cpp  test_SocketW.cpp.mute  test_SocketWServer.cpp  test_SocketWServer.cpp.mute
tools/: list_sources.sh  pre-commit  pre-commit-tester-installer.sh
